--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,6 +1,9 @@
 2012-11-03  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi: Further general copyedits.
+	(List Functions): Remove copy-tree, standard elisp for some time.
+	(Efficiency Concerns): Comment out examples that no longer apply.
+	(Compiler Optimizations): Rename from "Optimizing Compiler"; reword.
 
 2012-11-02  Glenn Morris  <rgm@gnu.org>
 
