--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-03  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/cl-macs.el (cl-do-all-symbols): Add doc string.
+
 2012-11-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* term/pc-win.el: Don't load term/internal from here.
