--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-11-03  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Omit duplicate definitions no longer needed with gcc -g3.
+	* lisp.h (GCTYPEBITS, GCALIGNMENT, ARRAY_MARK_FLAG, PSEUDOVECTOR_FLAG)
+	(VALMASK, MOST_POSITIVE_FIXNUM, MOST_NEGATIVE_FIXNUM):
+	Define only as macros.  There's no longer any need to also define
+	these symbols as enums or as constants, since we now assume
+	gcc -g3 when debugging.
+
 2012-11-03  Chong Yidong  <cyd@gnu.org>
 
 	* process.c (wait_reading_process_output): Clean up the last
