--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-03  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (set-copyright): Add msdos/sed2v2.inp.
+
 2012-11-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix data-loss with --batch (Bug#9574).
