--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-11-03  Eli Zaretskii  <eliz@gnu.org>
 
+	* lib/makefile.w32-in (GNULIBOBJS): Add $(BLD)/fpending.$(O) and
+	$(BLD)/close-stream.$(O).
+	($(BLD)/close-stream.$(O)):
+	($(BLD)/fpending.$(O)): New dependencies.
+
 	* config.bat: Copy lib/execinfo.in.h to lib/execinfo.in-h if needed.
 
 2012-11-03  Paul Eggert  <eggert@cs.ucla.edu>
