--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-03  Eli Zaretskii  <eliz@gnu.org>
+
+	* config.nt (PENDING_OUTPUT_N_BYTES): Define.
+
 2012-11-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* inc/unistd.h (setpgid, getpgrp): Provide prototypes.  (Bug#12776)
