--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,6 @@
 	($(BLD)/close-stream.$(O)):
 	($(BLD)/fpending.$(O)): New dependencies.
 
-	* config.bat: Copy lib/execinfo.in.h to lib/execinfo.in-h if needed.
-
 2012-11-03  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix data-loss with --batch (Bug#9574).
@@ -14,6 +12,10 @@
 	* lib/fpending.h, m4/close-stream.m4, m4/fpending.m4:
 	New files, from gnulib.
 	* lib/gnulib.mk, m4/gnulib-comp.m4: Regenerate.
+
+2012-11-03  Eli Zaretskii  <eliz@gnu.org>
+
+	* config.bat: Copy lib/execinfo.in.h to lib/execinfo.in-h if needed.
 
 2012-11-02  Glenn Morris  <rgm@gnu.org>
 
