--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-04  Juri Linkov  <juri@jurta.org>
+
+	* isearch.el (isearch-help-for-help, isearch-describe-bindings)
+	(isearch-describe-key, isearch-describe-mode): Use a display
+	action instead of binding same-window-* variables (Bug#10040).
+
 2012-11-03  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/cl-macs.el (cl-parse-loop-clause):
