--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-04  Chong Yidong  <cyd@gnu.org>
+
+	* bookmark.el (bookmark-bmenu-switch-other-window): Avoid binding
+	same-window-* variables.
+
 2012-11-04  Juri Linkov  <juri@jurta.org>
 
 	* isearch.el (isearch-help-for-help, isearch-describe-bindings)
