--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-04  Glenn Morris  <rgm@gnu.org>
+
+	* vc/vc-svn.el (vc-svn-state-heuristic): Avoid calling svn.  (Bug#7850)
+
 2012-11-04  Chong Yidong  <cyd@gnu.org>
 
 	* bookmark.el (bookmark-bmenu-switch-other-window): Avoid binding
