--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-04  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in.
+	(GNULIB_CLOSE_STREAM, HAVE_DECL___FPENDING): New macros.
+
 2012-11-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* config.nt (PENDING_OUTPUT_N_BYTES): Define.
