--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-05  Chong Yidong  <cyd@gnu.org>
+
+	* frames.texi (Initial Parameters): Doc fix (Bug#12144).
+
 2012-11-03  Chong Yidong  <cyd@gnu.org>
 
 	* objects.texi (General Escape Syntax): Clarify the explanation of
