--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-05  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* textmodes/ispell.el (ispell-program-name): Update
+	spellchecker parameters when customized.
+
 2012-11-04  Glenn Morris  <rgm@gnu.org>
 
 	* vc/vc-svn.el (vc-svn-state-heuristic): Avoid calling svn.  (Bug#7850)
