--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-06  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/gv.el (gv-define-setter): Fix doc typo.
+
 2012-11-05  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/cl-extra.el (cl-prettyexpand):
